@@ -6,7 +6,7 @@
 # Date modified: $Date$
 # Version:       $Revision$
 
-AC_INIT([PyJuggler], [0.11], [vrjuggler-devel@lists.sourceforge.net])
+AC_INIT([PyJuggler], [0.12], [vrjuggler-devel@lists.sourceforge.net])
 AC_PREREQ([2.53])
 AC_COPYRIGHT([PyJuggler is (C) Copyright 2002-2004 by Patrick Hartling])
 AC_REVISION([$Revision$])
@@ -497,6 +497,7 @@ AC_CONFIG_FILES([Makefile
                  src/Makefile
                  src/common.mk
                  src/common-targets.mk
+                 src/cluster/Makefile
                  src/gadget/Makefile
                  src/jccl/Makefile
                  src/osgapp/Makefile
