@@ -7,9 +7,9 @@
 # Version:       $Revision$
 
 import string
-__all__     = ["vrj", "gadget", "jccl", "vpr"]
+__all__     = ["vrj", "cluster", "gadget", "jccl", "vpr"]
 __build__   = 1
-__version__ = '0.11.0.%d' % __build__
+__version__ = '0.12.0.%d' % __build__
 __date__    = string.join(string.split('$Date$')[1:3], ' ')
 __author__  = 'Patrick Hartling <patrick@vrjuggler.org>'
 __doc__     = '''This is PyJuggler.  For information regarding PyJuggler see:
