@@ -1,0 +1,19 @@
+// PyJuggler is (C) Copyright 2002-2004 by Patrick Hartling
+// Distributed under the GNU Lesser General Public License 2.1.  (See
+// accompanying file COPYING.txt or http://www.gnu.org/copyleft/lesser.txt)
+
+// File:          $RCSfile$
+// Date modified: $Date$
+// Version:       $Revision$
+
+// Include =====================================================================
+#include <boost/python.hpp>
+
+// Exports =====================================================================
+void _Export_UserData();
+
+// Module ======================================================================
+BOOST_PYTHON_MODULE(cluster)
+{
+    _Export_UserData();
+}
